manifests/policies/deny-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-latest-tag
spec:
  validationFailureAction: Enforce
  rules:
  - name: no-latest-tag
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Imagem com tag 'latest' não é permitida."
      pattern:
        spec:
          containers:
          - image: "!*:latest"
